--- a/Jornal - Português, 2018/cinema.html
+++ b/Jornal - Português, 2018/cinema.html
@@ -4,7 +4,7 @@
     <title>Jornal - Português</title>
     <meta charset="utf-8">
     <link href="css/style-common.css" rel="stylesheet">
-    <link href="css/style-index.css" rel="stylesheet">
+    <link href="css/style-model.css" rel="stylesheet">
     <script>
         function openMenu() {
             document.getElementById('overlay').style.width = "100%";
@@ -65,50 +65,56 @@
                 </div>
             </nav>
 
-            
+
         </div>
     </div>
 
-    <section id="theme">
-        <nav id="content-inside-theme">
-            <a class="box-link" href="literatura.html">
-                <div class="box-model rectangle">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-50">Literatura</h1>
-                </div>
-            </a>
-            <a class="box-link" href="cinema.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Cinema</h1>
-                </div>
-            </a>
-            <a class="box-link" href="teatro.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Teatro</h1>
-                </div>
-            </a>
-            <a class="box-link" href="pintura.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Pintura</h1>
-                </div>
-            </a>
-            <a class="box-link" href="musica.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Música</h1>
+    <section id="matter">
+        <div id="matter-background" style="background: url(imagens/cinema.jpg); background-size: cover;"></div>
 
-                </div>
-            </a>
-            <a class="box-link" href="escultura.html">
-                <div class="box-model rectangle">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-50">Escultura</h1>
-                </div>
-            </a>
-        </nav>
+        <div class="box-title">
+            <h1 class="title-article">O <span class="underline-effect">Cinema</span> do Romantismo Inglês</h1>
+        </div>
+
+        <article id="article">
+            <p>Os filmes do gênero romance podem ser definidos como aqueles cujo enredo se desenvolve em torno de um envolvimento amoroso entre os protagonistas. Um dos pré-requisitos do gênero é de que o filme tenha um "final feliz", contudo, alguns filmes com final triste também podem ser considerados filmes do gênero romântico.</p>
+            <p>Alguns dos clichês do gênero são o "amor verdadeiro", que se sobrepõe a todos os obstáculos. </p>
+
+            <h2 class="subtitle">Alguns livros e suas adaptações ao cinema:</h2>
+
+            <div class="content-figures">
+                <figure class="all">
+                    <img src="imagens/cinema-img-1.jpg"/>
+                    <figcaption>O Morro dos Ventos Uivantes - Emily Bronte - Livro - 1847</figcaption>
+                </figure>
+                <figure class="all">
+                    <img src="imagens/cinema-img-2.jpg" />
+                    <figcaption>O Morro dos Ventos Uivantes - Filme - 1992</figcaption>
+                </figure>
+            </div>
+            <div class="content-figures">
+                <figure class="all">
+                    <img src="imagens/cinema-img-3.jpg"/>
+                    <figcaption>Orgulho e Preconceito - Jane Austen - Livro - 1813</figcaption>
+                </figure>
+                <figure class="all">
+                    <img src="imagens/cinema-img-4.jpg" />
+                    <figcaption>Orgulho e Preconceito - Filme - 2005</figcaption>
+                </figure>
+            </div>
+            <div class="content-figures">
+                <figure class="all">
+                    <img src="imagens/cinema-img-5.png"/>
+                    <figcaption>Admirável Mundo Novo - Aldous Huxley - Livro - 1932</figcaption>
+                </figure>
+                <figure class="all">
+                    <img src="imagens/cinema-img-6.jpg" />
+                    <figcaption>Admirável Mundo Novo - Filme - 1998</figcaption>
+                </figure>
+            </div>
+
+        </article>
+
     </section>
 
 </body>
