--- a/Jornal - Português, 2018/teatro.html
+++ b/Jornal - Português, 2018/teatro.html
@@ -4,7 +4,7 @@
     <title>Jornal - Português</title>
     <meta charset="utf-8">
     <link href="css/style-common.css" rel="stylesheet">
-    <link href="css/style-index.css" rel="stylesheet">
+    <link href="css/style-model.css" rel="stylesheet">
     <script>
         function openMenu() {
             document.getElementById('overlay').style.width = "100%";
@@ -65,50 +65,31 @@
                 </div>
             </nav>
 
-            
+
         </div>
     </div>
 
-    <section id="theme">
-        <nav id="content-inside-theme">
-            <a class="box-link" href="literatura.html">
-                <div class="box-model rectangle">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-50">Literatura</h1>
-                </div>
-            </a>
-            <a class="box-link" href="cinema.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Cinema</h1>
-                </div>
-            </a>
-            <a class="box-link" href="teatro.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Teatro</h1>
-                </div>
-            </a>
-            <a class="box-link" href="pintura.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Pintura</h1>
-                </div>
-            </a>
-            <a class="box-link" href="musica.html">
-                <div class="box-model square">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-35">Música</h1>
+    <section id="matter">
+        <div id="matter-background" class="teatro"></div>
 
-                </div>
-            </a>
-            <a class="box-link" href="escultura.html">
-                <div class="box-model rectangle">
-                    <p class="category">Artigo</p>
-                    <h1 class="title size-50">Escultura</h1>
-                </div>
-            </a>
-        </nav>
+        <div class="box-title">
+            <h1 class="title-article">O <span class="underline-effect">Teatro</span> no Romantismo Inglês</h1>
+        </div>
+
+        <article id="article">
+            <p>O romantismo deu aos artistas mais liberdade de criação, o que mudou completamente o modo de fazer teatro. Durante o século XVIII e XIX, os temas mitológicos da história antiga deram lugar a problemas humanos, morais e sociais da época. Ganham destaque as comédias românticas, as tragédias e os dramas históricos.</p>
+            <figure class="cent">
+                <img src="imagens/teatro-img-1.jpg"/>
+                <figcaption>William Shakespeare(1564 - 1616)</figcaption>
+            </figure>
+            <p>O teatro inglês se apoia fortemente nas obras de William Shakespeare durante este período, reencenando peças como Hamlet, A Megera Domada, Sonho de uma Noite de Verão, entre outras. </p>
+            <figure  class="cent">
+                <img src="imagens/teatro-img-2.jpg"/>
+                <figcaption>Hamlet, obra de William Shakespeare<br> publicada em 1603.</figcaption>
+            </figure>
+            <p>Obras de outros grandes autores do romantismo, como Percy Bysshe Shelley, William Wordsworth e Samuel Taylor Coleridge foram adaptadas para o teatro.</p>
+        </article>
+
     </section>
 
 </body>
